# micro-fastapi

./: .gitignore  README.md  docker-compose.yaml  logger-plain.conf  pyproject.toml  requirements.txt
src/micro_fastapi/: __init__.py  utils.py
tests/: tasks.py  test.py  ui.py
