[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "micro-fastapi"
version = "0.0.7"
authors = [
  { name="Sergey Strukov", email="sstrukov@sds.ru" },
]
description = "Python library fastapi for my microservices"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'fastapi==0.98.0',
  'fastapi-utils==0.2.1',
  'starlette-exporter==0.16.0',
  'prometheus-client==0.17.0',
  'asyncio==3.4.3',
  'python-json-logger==2.0.7',
]

[project.urls]
#Homepage = "https://gitlabci.dpd.ru/dpd/argis/serviceapp/zilog-fastapi"
#Issues = "https://gitlabci.dpd.ru/dpd/argis/serviceapp/zilog-fastapi/-/issues"